// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Navbar > should have the correct functionality > should be floating when the window is scrolled 1`] = `
<div>
  <nav
    class=""
  >
    <ul>
      <li>
        <a
          class="active"
          href="/"
        >
          <svg
            height="24"
            viewBox="0 -960 960 960"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M180-120q-25 0-42.5-17.5T120-180v-76l160-142v278H180Zm140 0v-160h320v160H320Zm360 0v-328L509-600l121-107 190 169q10 9 15 20.5t5 24.5v313q0 25-17.5 42.5T780-120H680ZM120-310v-183q0-13 5-25t15-20l300-266q8-8 18.5-11.5T480-819q11 0 21.5 3.5T520-804l80 71-480 423Z"
            />
          </svg>
          <span>
            Home
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="/shop"
        >
          <svg
            height="24"
            viewBox="0 -960 960 960"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M841-518v318q0 33-23.5 56.5T761-120H201q-33 0-56.5-23.5T121-200v-318q-23-21-35.5-54t-.5-72l42-136q8-26 28.5-43t47.5-17h556q27 0 47 16.5t29 43.5l42 136q12 39-.5 71T841-518Zm-272-42q27 0 41-18.5t11-41.5l-22-140h-78v148q0 21 14 36.5t34 15.5Zm-180 0q23 0 37.5-15.5T441-612v-148h-78l-22 140q-4 24 10.5 42t37.5 18Zm-178 0q18 0 31.5-13t16.5-33l22-154h-78l-40 134q-6 20 6.5 43t41.5 23Zm540 0q29 0 42-23t6-43l-42-134h-76l22 154q3 20 16.5 33t31.5 13ZM201-200h560v-282q-5 2-6.5 2H751q-27 0-47.5-9T663-518q-18 18-41 28t-49 10q-27 0-50.5-10T481-518q-17 18-39.5 28T393-480q-29 0-52.5-10T299-518q-21 21-41.5 29.5T211-480h-4.5q-2.5 0-5.5-2v282Zm560 0H201h560Z"
            />
          </svg>
          <span>
            Shop
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="/cart"
        >
          <svg
            height="24"
            viewBox="0 -960 960 960"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"
            />
          </svg>
          <span>
            Cart
          </span>
          <div
            class="badgeContainer"
            data-testid="badgeContainer"
          >
            <span
              class="badgeLabel"
              data-testid="badgeLabel"
            >
              1
            </span>
          </div>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Navbar > should have the correct functionality > should not show cart items count if it is zero 1`] = `
<div>
  <nav
    class=""
  >
    <ul>
      <li>
        <a
          class="active"
          href="/"
        >
          <svg
            height="24"
            viewBox="0 -960 960 960"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M180-120q-25 0-42.5-17.5T120-180v-76l160-142v278H180Zm140 0v-160h320v160H320Zm360 0v-328L509-600l121-107 190 169q10 9 15 20.5t5 24.5v313q0 25-17.5 42.5T780-120H680ZM120-310v-183q0-13 5-25t15-20l300-266q8-8 18.5-11.5T480-819q11 0 21.5 3.5T520-804l80 71-480 423Z"
            />
          </svg>
          <span>
            Home
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="/shop"
        >
          <svg
            height="24"
            viewBox="0 -960 960 960"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M841-518v318q0 33-23.5 56.5T761-120H201q-33 0-56.5-23.5T121-200v-318q-23-21-35.5-54t-.5-72l42-136q8-26 28.5-43t47.5-17h556q27 0 47 16.5t29 43.5l42 136q12 39-.5 71T841-518Zm-272-42q27 0 41-18.5t11-41.5l-22-140h-78v148q0 21 14 36.5t34 15.5Zm-180 0q23 0 37.5-15.5T441-612v-148h-78l-22 140q-4 24 10.5 42t37.5 18Zm-178 0q18 0 31.5-13t16.5-33l22-154h-78l-40 134q-6 20 6.5 43t41.5 23Zm540 0q29 0 42-23t6-43l-42-134h-76l22 154q3 20 16.5 33t31.5 13ZM201-200h560v-282q-5 2-6.5 2H751q-27 0-47.5-9T663-518q-18 18-41 28t-49 10q-27 0-50.5-10T481-518q-17 18-39.5 28T393-480q-29 0-52.5-10T299-518q-21 21-41.5 29.5T211-480h-4.5q-2.5 0-5.5-2v282Zm560 0H201h560Z"
            />
          </svg>
          <span>
            Shop
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="/cart"
        >
          <svg
            height="24"
            viewBox="0 -960 960 960"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"
            />
          </svg>
          <span>
            Cart
          </span>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Navbar > should have the correct functionality > should show cart items count as 999+ if it is >= 1000 1`] = `
<div>
  <nav
    class=""
  >
    <ul>
      <li>
        <a
          class="active"
          href="/"
        >
          <svg
            height="24"
            viewBox="0 -960 960 960"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M180-120q-25 0-42.5-17.5T120-180v-76l160-142v278H180Zm140 0v-160h320v160H320Zm360 0v-328L509-600l121-107 190 169q10 9 15 20.5t5 24.5v313q0 25-17.5 42.5T780-120H680ZM120-310v-183q0-13 5-25t15-20l300-266q8-8 18.5-11.5T480-819q11 0 21.5 3.5T520-804l80 71-480 423Z"
            />
          </svg>
          <span>
            Home
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="/shop"
        >
          <svg
            height="24"
            viewBox="0 -960 960 960"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M841-518v318q0 33-23.5 56.5T761-120H201q-33 0-56.5-23.5T121-200v-318q-23-21-35.5-54t-.5-72l42-136q8-26 28.5-43t47.5-17h556q27 0 47 16.5t29 43.5l42 136q12 39-.5 71T841-518Zm-272-42q27 0 41-18.5t11-41.5l-22-140h-78v148q0 21 14 36.5t34 15.5Zm-180 0q23 0 37.5-15.5T441-612v-148h-78l-22 140q-4 24 10.5 42t37.5 18Zm-178 0q18 0 31.5-13t16.5-33l22-154h-78l-40 134q-6 20 6.5 43t41.5 23Zm540 0q29 0 42-23t6-43l-42-134h-76l22 154q3 20 16.5 33t31.5 13ZM201-200h560v-282q-5 2-6.5 2H751q-27 0-47.5-9T663-518q-18 18-41 28t-49 10q-27 0-50.5-10T481-518q-17 18-39.5 28T393-480q-29 0-52.5-10T299-518q-21 21-41.5 29.5T211-480h-4.5q-2.5 0-5.5-2v282Zm560 0H201h560Z"
            />
          </svg>
          <span>
            Shop
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="/cart"
        >
          <svg
            height="24"
            viewBox="0 -960 960 960"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"
            />
          </svg>
          <span>
            Cart
          </span>
          <div
            class="badgeContainer"
            data-testid="badgeContainer"
          >
            <span
              class="badgeLabel"
              data-testid="badgeLabel"
            >
              999+
            </span>
          </div>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Navbar > should have the correct functionality > should show cart items count if it is greater than 0 1`] = `
<div>
  <nav
    class=""
  >
    <ul>
      <li>
        <a
          class="active"
          href="/"
        >
          <svg
            height="24"
            viewBox="0 -960 960 960"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M180-120q-25 0-42.5-17.5T120-180v-76l160-142v278H180Zm140 0v-160h320v160H320Zm360 0v-328L509-600l121-107 190 169q10 9 15 20.5t5 24.5v313q0 25-17.5 42.5T780-120H680ZM120-310v-183q0-13 5-25t15-20l300-266q8-8 18.5-11.5T480-819q11 0 21.5 3.5T520-804l80 71-480 423Z"
            />
          </svg>
          <span>
            Home
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="/shop"
        >
          <svg
            height="24"
            viewBox="0 -960 960 960"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M841-518v318q0 33-23.5 56.5T761-120H201q-33 0-56.5-23.5T121-200v-318q-23-21-35.5-54t-.5-72l42-136q8-26 28.5-43t47.5-17h556q27 0 47 16.5t29 43.5l42 136q12 39-.5 71T841-518Zm-272-42q27 0 41-18.5t11-41.5l-22-140h-78v148q0 21 14 36.5t34 15.5Zm-180 0q23 0 37.5-15.5T441-612v-148h-78l-22 140q-4 24 10.5 42t37.5 18Zm-178 0q18 0 31.5-13t16.5-33l22-154h-78l-40 134q-6 20 6.5 43t41.5 23Zm540 0q29 0 42-23t6-43l-42-134h-76l22 154q3 20 16.5 33t31.5 13ZM201-200h560v-282q-5 2-6.5 2H751q-27 0-47.5-9T663-518q-18 18-41 28t-49 10q-27 0-50.5-10T481-518q-17 18-39.5 28T393-480q-29 0-52.5-10T299-518q-21 21-41.5 29.5T211-480h-4.5q-2.5 0-5.5-2v282Zm560 0H201h560Z"
            />
          </svg>
          <span>
            Shop
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="/cart"
        >
          <svg
            height="24"
            viewBox="0 -960 960 960"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"
            />
          </svg>
          <span>
            Cart
          </span>
          <div
            class="badgeContainer"
            data-testid="badgeContainer"
          >
            <span
              class="badgeLabel"
              data-testid="badgeLabel"
            >
              1
            </span>
          </div>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Navbar > should have the correct functionality > should show the active link when clicked 1`] = `
<div>
  <nav
    class=""
  >
    <ul>
      <li>
        <a
          class="active"
          href="/"
        >
          <svg
            height="24"
            viewBox="0 -960 960 960"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M180-120q-25 0-42.5-17.5T120-180v-76l160-142v278H180Zm140 0v-160h320v160H320Zm360 0v-328L509-600l121-107 190 169q10 9 15 20.5t5 24.5v313q0 25-17.5 42.5T780-120H680ZM120-310v-183q0-13 5-25t15-20l300-266q8-8 18.5-11.5T480-819q11 0 21.5 3.5T520-804l80 71-480 423Z"
            />
          </svg>
          <span>
            Home
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="/shop"
        >
          <svg
            height="24"
            viewBox="0 -960 960 960"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M841-518v318q0 33-23.5 56.5T761-120H201q-33 0-56.5-23.5T121-200v-318q-23-21-35.5-54t-.5-72l42-136q8-26 28.5-43t47.5-17h556q27 0 47 16.5t29 43.5l42 136q12 39-.5 71T841-518Zm-272-42q27 0 41-18.5t11-41.5l-22-140h-78v148q0 21 14 36.5t34 15.5Zm-180 0q23 0 37.5-15.5T441-612v-148h-78l-22 140q-4 24 10.5 42t37.5 18Zm-178 0q18 0 31.5-13t16.5-33l22-154h-78l-40 134q-6 20 6.5 43t41.5 23Zm540 0q29 0 42-23t6-43l-42-134h-76l22 154q3 20 16.5 33t31.5 13ZM201-200h560v-282q-5 2-6.5 2H751q-27 0-47.5-9T663-518q-18 18-41 28t-49 10q-27 0-50.5-10T481-518q-17 18-39.5 28T393-480q-29 0-52.5-10T299-518q-21 21-41.5 29.5T211-480h-4.5q-2.5 0-5.5-2v282Zm560 0H201h560Z"
            />
          </svg>
          <span>
            Shop
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="/cart"
        >
          <svg
            height="24"
            viewBox="0 -960 960 960"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"
            />
          </svg>
          <span>
            Cart
          </span>
          <div
            class="badgeContainer"
            data-testid="badgeContainer"
          >
            <span
              class="badgeLabel"
              data-testid="badgeLabel"
            >
              1
            </span>
          </div>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;
